tests/negative_tests/syntax_errors/else_without_if.c
// INVALID - Syntax Error: else must follow if
int main() {
    int x;
    else {  // ERROR: else without if
        x = 5;
    }
    return x;
}
